Lion's Lament is Done!

--- a/KevinHorrigan/LionsLament/TexLive/Preface/preface.tex
+++ b/KevinHorrigan/LionsLament/TexLive/Preface/preface.tex
@@ -1,27 +1,18 @@
 \begin{titlepage}
     \vspace*{1.73cm}
     {\Large PREFACE}\\[.5cm]
-    ``Kevin is a talent scholarship recipient and an honors graduate from
-    UW-Milwaukee with a B.F.A. in Guitar Performance, studying finger-style
-    guitar. He is only the 7th person in the world to obtain a B.F.A. with that
-    particular specialization.  As the winner of the prestigious 2011 Canadian
-    Finger-style Guitar Competition, he has shared the stage with some of the
-    world's finest finger-style guitar players, including Don Ross, Stephen
-    Bennett, and Gareth Pearson.\\
-    Kevin's personal acoustic guitar approach is characterized by a highly rhythmic
-    and percussive playing style, often slapping/tapping the strings to accompany
-    independent bass/melody lines.\\
-    Born in Brookfield, WI, and currently based out of Milwaukee, WI, Kevin
-    discovered his passion for music at a young age. His earliest memories include
-    dancing around the house, listening to Michael Jackson and The Beatles on
-    vinyl.''\footnote[1]{www.kevin-horrigan.com/bio/}\\
-    ``Lion's Lament'' is an example of Horrigan's penchant for driving bass and
-    percussion.  The rhythm accents are placed on beats two and four in this
-    composition.  Focus on playing around with accenting the first beat to
-    create a rhythmic hocket.\\  
-    Kevin Horrigan is a new voice in the composition of solo acoustic
-    fingerstyle guitar.  Keep on the look-out for Kevin Horrigan as an emerging
-    tour-de-force in the fingerstyle community.\\
+    This transcription is based on live and studio performances by the
+    composer; it may differ from the video sources because it contains the
+    composer's latest performance practices.\\
+    \indent Each section in ``Lion's Lament'' has been described as a specific
+    character by the composer.  This piece is programmatic in its conception
+    and should be performed with a program in mind.  While this transcription takes a
+    structured approach, the performer of the piece could take liberties with
+    the structure.\\  
+    \indent This is a funky lion dance.  The performer is free to improvise over the
+    harmonic structure as long as the funky lion continues to dance.\\  
+    \indent Kevin Horrigan is a new voice in the composition of solo acoustic
+    fingerstyle guitar.  Watch for Kevin Horrigan as an emerging artist in the fingerstyle community.\\
 
     \date{}
     \begin{center}
