--- a/KevinHorrigan/LionsLament/TexLive/Title Page/title.tex
+++ b/KevinHorrigan/LionsLament/TexLive/Title Page/title.tex
@@ -3,7 +3,8 @@
         \vspace*{1.73cm}
         \textsc{\resizebox{15cm}{!}{Kevin Horrigan}}\\[3cm]
         \textsc{\Huge Lion's Lament}\\[.5cm]
-        for Solo Acoustic Six-String Guitar\\
+        for Solo Acoustic Six-String Guitar\\[.5cm]
+        Tuning:\\
         A\textsubscript{1}A\textsubscript{2}D\textsubscript{3}G\textsubscript{3}B\textsubscript{3}E\textsubscript{4}\\[3cm]
         Transcribed and Edited by\\
         \textsc{Rachael Thomas Carlson}\\
