--- a/KevinHorrigan/LionsLament/TexLive/Cover /cover.tex
+++ b/KevinHorrigan/LionsLament/TexLive/Cover /cover.tex
@@ -50,7 +50,8 @@
 \textsc{\resizebox{5cm}{!}{Kevin}}\\
 \textsc{\resizebox{15cm}{!}{Horrigan}}\\[3cm]
 \textsc{\Huge Lion's Lament}\\[.5cm]
-for Solo Acoustic Six-String Guitar\\
+for Solo Acoustic Six-String Guitar\\[.5cm]
+Tuning:\\
 A\textsubscript{1}A\textsubscript{2}D\textsubscript{3}G\textsubscript{3}B\textsubscript{3}E\textsubscript{4}\\
 \vfill
 \textsc{Sleep Limited Publications}
