Some new files and a few other things

--- a/KevinHorrigan/LionsLament/TexLive/LionsLament.complete.tex
+++ b/KevinHorrigan/LionsLament/TexLive/LionsLament.complete.tex
@@ -6,6 +6,14 @@
 
 \newpage
 
+\includepdf[fitpaper=true, pages=-]{cover.pdf}
+
+\newpage
+\thispagestyle{empty}
+\mbox{}
+
+\newpage
+
 \includepdf[fitpaper=true, pages=-]{title.pdf}
 
 \newpage
@@ -23,5 +31,19 @@
 \newpage
 
 \includepdf[fitpaper=true, pages=-]{editorialmethod.pdf}
+
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\newpage
+\thispagestyle{empty}
+\mbox{}
+
+\newpage
+
+\includepdf[fitpaper=true, pages=-]{backcover.pdf}
 
 \end{document}
