--- a/theShip/TexLive/Cover/cover.tex
+++ b/theShip/TexLive/Cover/cover.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage{fouriernc}
 \usepackage{fixltx2e}
+\graphicspath{ {/home/rtc/lilypond/theShip/TexLive/} }
 %
 \usetikzlibrary{calc}
 %
@@ -53,6 +54,7 @@ for Solo Acoustic Six-String Guitar\\[.5cm]
 Tuning:\\
 D\textsubscript{2}A\textsubscript{2}D\textsubscript{3}G\textsubscript{3}A\textsubscript{3}D\textsubscript{4}\\
 \vfill
+\includegraphics[scale=0.1]{logo}\\
 \textsc{Sleep Limited Publications}
 \end{center}
 \end{document}
