Fixed Tuning appearance and logo

--- a/theShip/TexLive/Cover/cover.tex
+++ b/theShip/TexLive/Cover/cover.tex
@@ -52,7 +52,7 @@
 \textsc{\LARGE A Docked Ship Awakens to the Foggy Dawn}\\[.5cm]
 for Solo Acoustic Six-String Guitar\\[.5cm]
 Tuning:\\
-D\textsubscript{2}A\textsubscript{2}D\textsubscript{3}G\textsubscript{3}A\textsubscript{3}D\textsubscript{4}\\
+D{\tiny 2} A{\tiny 2} D{\tiny 3} G{\tiny 3} A{\tiny 3} D{\tiny 4}\\
 \vfill
 \includegraphics[scale=0.075]{logo}\\
 \textsc{Sleep Limited Publications}
