--- a/theShip/TexLive/Title Page/title.theship.tex
+++ b/theShip/TexLive/Title Page/title.theship.tex
@@ -6,6 +6,7 @@
 \usepackage{fixltx2e}
 \usepackage{tgschola}
 \usepackage[T1]{fontenc}
+\graphicspath{ {/home/rtc/lilypond/theShip/TexLive/} }
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
 \begin{document}
