--- a/theShip/TexLive/Back Cover/backcover.tex
+++ b/theShip/TexLive/Back Cover/backcover.tex
@@ -7,6 +7,7 @@
 \usepackage{fixltx2e}
 \usepackage{tgschola}
 \usepackage[T1]{fontenc}
+\graphicspath{ {/home/rtc/lilypond/theShip/TexLive/} }
 %
 \usetikzlibrary{calc}
 %
@@ -49,6 +50,7 @@
         ($ (current page.south east) + (-.725cm,.725cm) $);
 \end{tikzpicture}
 \vfill
+\includegraphics[scale=0.075]{logo}\\
 \textsc{Sleep Limited Publications}
 \end{center}
 %
