--- a/theShip/TexLive/Title Page/title.tex
+++ b/theShip/TexLive/Title Page/title.tex
@@ -5,11 +5,12 @@
         \textsc{\Huge A Docked Ship Awakens to the Foggy Dawn}\\[.5cm]
         for Solo Acoustic Six-String Guitar\\[.5cm]
         Tuning:\\
-        D\textsubscript{2}A\textsubscript{2}D\textsubscript{3}G\textsubscript{3}A\textsubscript{3}D\textsubscript{4}\\[3cm]
+        D{\tiny 2} A{\tiny 2} D{\tiny 3} G{\tiny 3} A{\tiny 3} D{\tiny 4}\\[3cm]
         Transcribed and Edited by\\
         \textsc{Rachael Carlson}\\
         \date{}
         \vfill
+        \includegraphics[scale=0.075]{logo}\\
         \textsc{Sleep Limited Publications}
 
 
